--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-fetch": "^0.7.0",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
