Added Paginated Tweets

--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "apollo-fetch": "^0.7.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "clsx": "^1.1.1",
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
