Added Resources Content

--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "apollo-fetch": "^0.7.0",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "d3-scale": "^3.2.1",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
