Added Live Tweets

--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-simple-maps": "^2.1.2",
-    "react-tooltip": "^4.2.7"
+    "react-tooltip": "^4.2.7",
+    "react-twitter-embed": "^3.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
