--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,12 @@
-FROM node
+FROM node:alpine as builder
 WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json ./
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
-COPY . ./
-CMD ["npm", "start"]
+COPY ./package.json ./
+RUN npm i
+COPY ./ ./
+RUN npm run build
+
+FROM nginx
+
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+
+COPY --from=builder /app/build /usr/share/nginx/html
