--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-fetch": "^0.7.0",
     "cors": "^2.8.5",
+    "dialogflow": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^15.1.0",
     "graphql-type-datetime": "^0.2.4",
     "mongoose": "^5.9.19",
-    "nodemon": "^2.0.4"
+    "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.4",
+    "uuid": "^8.2.0"
   }
 }
