--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,9 @@ upstream api {
     server covidian_server:4000;
 }
 
-upstream predict {
-    server covidian_predict:80;
-}
+# upstream predict {
+#     server covidian_predict:80;
+# }
 
 server{
     listen 80;
@@ -17,9 +17,9 @@ server{
         proxy_pass http://react;
     }
 
-    location /predict {
-        proxy_pass http://predict;
-    }
+    # location /predict {
+    #     proxy_pass http://predict;
+    # }
 
     location /sockjs-node {
         proxy_pass http://react;
@@ -37,6 +37,11 @@ server{
         proxy_set_header Host $http_host;
         proxy_cache_bypass $http_upgrade;
         proxy_redirect off; 
+    }
+
+    location /api {
+    rewrite /api/(.*) /$1 break;
+    proxy_pass http://api;
     }
 
 }
