Docker Compose Changes

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     depends_on:
       - covidian_server
-      # - covidian_predict
+      - covidian_predict
     volumes:
       - /app/node_modules
       - ./client:/app
@@ -27,5 +27,5 @@ services:
     build: ./server
     environment:
       - covidian_server_internal_mongo_url=${covidian_server_internal_mongo_url}
-  # covidian_predict:
-  #   build: ./data_science/predict
+  covidian_predict:
+    build: ./data_science/predict
