--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,9 +6,9 @@ upstream api {
     server covidian_server:4000;
 }
 
-# upstream predict {
-#     server covidian_predict:80;
-# }
+upstream predict {
+    server covidian_predict:80;
+}
 
 server{
     listen 80;
@@ -17,9 +17,9 @@ server{
         proxy_pass http://react;
     }
 
-    # location /predict {
-    #     proxy_pass http://predict;
-    # }
+    location /predict {
+        proxy_pass http://predict;
+    }
 
     location /sockjs-node {
         proxy_pass http://react;
